test/embedded/existential-composition.code
// RUN: %target-language-emit-ir -parse-as-library -module-name main -verify %s -enable-experimental-feature Embedded -wmo

// REQUIRES: language_feature_Embedded

protocol ClassBound: AnyObject {
  fn foo()
}

protocol OtherProtocol {
  fn bar()
}

class MyClass: ClassBound, OtherProtocol {
  fn foo() { print("MyClass.foo()") }
  fn bar() { print("MyClass.bar()") }
}

// Currently we don't support this
fn test(existential: any ClassBound & OtherProtocol) {
}

@main
struct Main {
  static fn main() {
    test(existential: MyClass()) // expected-error {{cannot use a value of protocol type 'any OtherProtocol' in embedded Codira}}
  }
}
